2000-06-06  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* emacs/Makefile.w32: New file. Makefile for Meadow.

2000-06-06  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc-minibuf.el (mhc-input-day): 
	Use function instead of quoite. 
	(mhc-input-time): Ditto.

	* emacs/mhc-date.el (ddate-to-s): overkilling.
	defmacro -> defsubst. (dtime-to-s): Ditto.

	* emacs/00usage.jis: Descriptions about bytecompile.

	* emacs/mhc.el (mhc-cal-make-rectangle): speedup.

	* emacs/mhc-schedule.el (mhc-db-busy-p): Use cache for speedup.
	(mhc-db-holiday-p): Ditto.

	* emacs/mhc-date.el: Use defmacro and defusubst for speedup.

	* emacs/Makefile: New file.

2000-06-06  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el: Fix of scheme, which defines
	mhc-eword-encode-string.

2000-06-05  Yoshinari Nomura  <nom@quickhack.net>

	* emacs/mhc.el: check binding of 'gnus-version.

2000-06-05  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* emacs/mhc.el (mhc-eword-encode-string): New function.
	(mhc-sch-scan1): Replace eword-encode-string with
	mhc-eword-encode-string.

2000-06-05  Yoshinari Nomura  <nom@quickhack.net>

	* 00readme: hide mhc-core.

	* emacs/mhc.el: Change version number (0.25).

	* emacs/00usage.jis, 00readme.jis: 
	Change ML address and Web addresses. (again)

2000-06-02  Yoshinari Nomura  <nom@quickhack.net>

	* 00readme, 00readme.jis, emacs/00usage.jis:
	Change ML address and Web address.

2000-05-29  Yoshinari Nomura  <nom@quickhack.net>

	* NEWS.jis, NEWS : info about 0.25.

	* 00todo.jis : add some memos.

2000-05-27  Yoshinari NOMURA  <nom@quickhack.net>

        * 00changes.jis: obsolete.

	* ChangeLog, NEWS: New file.

2000-05-26  Yoshinari NOMURA  <nom@quickhack.net>

	* emacs/mhc.el: menu fix for xemacs. (thanks to shirai san)

2000-05-26  Yuuichi Teranishi <teranisi@gohome.org>

	* emacs/mhc.el (mhc-scan-month):
	Set `wl-summary-buffer-number-regexp' and
	`wl-summary-buffer-msgdb'.
