@@ -1,5 +1,9 @@
 2000-06-06  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>
 
+	* emacs/mhc-date.el (ddate-yy<): NEW backquote style to OLD backquote style.
+
+	* emacs/mhc-guess.el: Type fix.
+
 	* emacs/Makefile.w32: New file. Makefile for Meadow.
 
 2000-06-06  Yoshinari Nomura  <nom@quickhack.net>
